Remove unnecssary endpoints
